Create update password visuals & login input test

--- a/my-app/src/components/updatePass.css
+++ b/my-app/src/components/updatePass.css
@@ -31,7 +31,7 @@
     border: 1px solid #000000;
     border-radius: 5px;
     margin-right: 10px;
-    width: 140px;
+    width: 200px;
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -59,7 +59,6 @@
     color: #8D3B72
 }
 
-.userInput{
+.passInput{
     padding-bottom: 20px;
 }
-
