--- a/my-app/src/components/createAccount.css
+++ b/my-app/src/components/createAccount.css
@@ -31,7 +31,7 @@
     border: 1px solid #000000;
     border-radius: 5px;
     margin-right: 10px;
-    width: 140px;
+    width: 240px;
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -39,6 +39,10 @@
 .button:hover {
     background-color: #424874; 
     color: rgb(245, 245, 245);
+}
+
+.newInput{
+    padding-bottom: 20px;
 }
 
 .i{
@@ -53,29 +57,3 @@
 .i::placeholder {
     color: #000000; 
 }
-
-.error{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #8D3B72
-}
-
-.userInput{
-    padding-bottom: 20px;
-}
-
-.b1{
-    padding-top: 60px;
-}
-
-.button1{
-    padding: 14px 40px;;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    margin-right: 10px;
-    width: 240px;
-    font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #424874; 
-    color: rgb(245, 245, 245);
-}
-
