--- a/my-app/src/components/homePage.css
+++ b/my-app/src/components/homePage.css
@@ -40,3 +40,9 @@ h2{
     color:rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+h3{
+    color:rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+}
