Completeing user deactivation

--- a/my-app/src/components/grantAdmin.css
+++ b/my-app/src/components/grantAdmin.css
@@ -74,4 +74,16 @@ h2{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.drops{
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    margin-right: 10px;
+}
 
+option{
+    color:rgb(0, 0, 0);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px;
+}
