--- a/my-app/src/components/accountSetting.css
+++ b/my-app/src/components/accountSetting.css
@@ -27,12 +27,12 @@
 }
 
 .button{
-    padding: 14px 40px;;
+    padding: 14px 40px;
     border: 1px solid #000000;
     border-radius: 5px;
     margin-right: 10px;
     margin-top: 20px; 
-    width: 300px;
+    width: 300px !important;
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
