--- a/my-app/src/components/updatePass.css
+++ b/my-app/src/components/updatePass.css
@@ -62,3 +62,9 @@
 .passInput{
     padding-bottom: 20px;
 }
+
+h3{
+    color:rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+}
