--- a/my-app/src/components/accountSetting.css
+++ b/my-app/src/components/accountSetting.css
@@ -2,7 +2,7 @@
     margin: auto;
     width: 50%;
     padding: 150px;
-    margin-left: 300px;
+    margin-left: 330px;
     padding-top: 100px;
     background-color: #DCD6F7; 
     box-shadow:  0 0 10px  rgba(0,0,0,0.6);
@@ -68,4 +68,10 @@
 h2{
     color:rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h3{
+    color:rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
 }
