--- a/my-app/src/components/createAccount.css
+++ b/my-app/src/components/createAccount.css
@@ -90,3 +90,9 @@ h2{
     color:rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+h3{
+    color:rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+}
