--- a/my-app/src/components/login.css
+++ b/my-app/src/components/login.css
@@ -112,3 +112,9 @@ h2{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+h3{
+    color:rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+}
+
