--- a/my-app/src/components/search.css
+++ b/my-app/src/components/search.css
@@ -112,6 +112,7 @@ h2{
     padding: 5px;
     margin-top: 5px; 
     margin-bottom: 5px; 
+    margin-left: 5px; 
     background-color: #424874; 
     color: rgb(245, 245, 245);
 }
