Starting privacy policy & removing repeating css

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -10,5 +10,85 @@ body, html {
   text-align: center;
 }
 
+.sidebar {
+  margin: 0;
+  padding: 0;
+  padding-top: 0;
+  width: 200px;
+  background-color: #424874; 
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: rgb(255, 255, 255);
+  padding: 16px;
+  text-decoration: none;
+}
+
+.sidebar a.selected {
+  background-color: #DCD6F7;
+  color: rgb(0, 0, 0);
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #DCD6F7;
+  color: rgb(0, 0, 0);
+}
+
+h2{
+  color:rgb(255, 255, 255);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.main{
+  margin: auto;
+  width: 50%;
+  padding: 150px;
+  margin-left: 300px;
+  padding-top: 100px;
+  background-color: #DCD6F7; 
+  box-shadow:  0 0 10px  rgba(0,0,0,0.6);
+  -moz-box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+  -o-box-shadow: 0 0 10px  rgba(0,0,0,0.6);
+  border-radius: 20px; 
+  text-align: center;
+}
+
+.title{
+  padding-bottom: 15px; 
+}
+
+.title-h1{
+  color:rgb(0, 0, 0);
+  font-size: larger;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  padding: 100px;
+  margin: 0;
+}
+
+h3{
+  color:rgb(255, 255, 255);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: medium;
+}
+
+.i{
+  border: 1px solid #000000;
+  border-radius: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: medium;
+  width: 400px; 
+  padding: 15px;
+}
+
+.i::placeholder {
+  color: #000000; 
+}
+
 
 
