Added show information about a list section

--- a/my-app/src/components/customList.css
+++ b/my-app/src/components/customList.css
@@ -1,6 +1,6 @@
 .mains{
     margin: auto;
-    width: 85%;
+    width: 85% !important;
     padding: 50px;
     margin-left: 230px;
     padding-top: 20px;
