--- a/my-app/src/components/customList.css
+++ b/my-app/src/components/customList.css
@@ -19,7 +19,8 @@
     border: 1px solid #000000;
     border-radius: 5px;
     margin-top: 10px;
-    margin-left: 10px; 
+    margin-left: 50px; 
+    margin-right: 50px; 
 }
 
 .drops{
